<resources xmlns:tools="http://schemas.android.com/tools">
	<string name="anime">Anime</string>
	<string name="content_type_anime">Anime</string>
	<string name="content_type_all">All</string>
	<string name="anime_source_risto" translatable="false">RistoAnime</string>
	<string name="watch">Watch</string>
	<string name="continue_watching">Continue watching</string>
	<string name="episodes">Episodes</string>
	<string name="episode_number">Episode %1$s</string>
	<string name="anime_servers">Video servers</string>
	<string name="anime_loading_servers">Loading video servers…</string>
	<string name="anime_no_servers">No working video server was found</string>
	<string name="anime_stream_error">Could not load this episode</string>
	<string name="anime_trying_another_server">This server failed; trying another server…</string>
	<string name="anime_refreshing_servers">Refreshing temporary server links…</string>
	<string name="player_rotate_screen">Rotate screen</string>
	<string name="previous_episode">Previous episode</string>
	<string name="next_episode">Next episode</string>
	<string name="player_playback_speed">Playback speed</string>
	<string name="player_playback_speed_value">Playback speed · %1$s×</string>
	<string name="player_display_mode">Display mode</string>
	<string name="player_display_mode_value">Display mode · %1$s</string>
	<string name="player_display_fit">Fit</string>
	<string name="player_display_fill">Fill</string>
	<string name="player_display_zoom">Zoom</string>
	<string name="player_auto_next">Play next episode automatically</string>
	<string name="anime_episode_list_title">Episodes · %1$d</string>
	<string name="anime_last_episode_reached">This is the last episode</string>
	<string name="anime_first_episode_reached">This is the first episode</string>
	<string name="player_settings">Player settings</string>
	<string name="player_quality">Video quality</string>
	<string name="player_quality_auto">Auto</string>
	<string name="player_quality_unavailable">Quality options are not available for this server yet</string>
	<string name="player_option_value">%1$s · %2$s</string>
	<string name="player_setting_enabled">On</string>
	<string name="player_setting_disabled">Off</string>
	<string name="player_setting_unavailable">Not available</string>
	<string name="player_speed_short_value">%1$s×</string>
	<string name="player_screen_landscape">Landscape</string>
	<string name="player_screen_portrait">Portrait</string>
	<string name="player_lock_controls">Lock player controls</string>
	<string name="player_unlock_controls">Unlock player controls</string>
	<string name="player_controls_locked">Controls locked</string>
	<string name="player_gesture_volume">Volume · %1$d%%</string>
	<string name="player_gesture_brightness">Brightness · %1$d%%</string>
	<string name="player_seek_feedback">%1$s10 seconds</string>
    <string name="app_name" translatable="false">Anilord</string>
    <string name="local_storage">Local storage</string>
    <string name="favourites">Favorites</string>
    <string name="history">History</string>
    <string name="error_occurred">An error occurred</string>
    <string name="network_error">Network error</string>
    <string name="details">Details</string>
    <string name="chapters">Chapters</string>
    <string name="list">Liste</string>
    <string name="detailed_list">Detailed list</string>
    <string name="grid">Grid</string>
    <string name="list_mode">List mode</string>
    <string name="settings">Settings</string>
    <string name="remote_sources">Manga sources</string>
    <string name="loading_">Loading…</string>
    <string name="computing_">Computing…</string>
    <string name="chapter_d_of_d">Chapter %1$d of %2$d</string>
    <string name="close">Close</string>
    <string name="try_again">Try again</string>
    <string name="retry">Retry</string>
    <string name="clear_history">Clear history</string>
    <string name="nothing_found">Nothing found</string>
    <string name="history_is_empty">No history yet</string>
    <string name="read">Read</string>
    <string name="you_have_not_favourites_yet">No favorites yet</string>
    <string name="add_to_favourites">Favorite this</string>
    <string name="add_new_category">New category</string>
    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="share">Share</string>
    <string name="create_shortcut">Create shortcut</string>
    <string name="share_s">Share %s</string>
	<string name="search">Search</string>
	<string name="search_content_type">Search type</string>
    <string name="search_manga">Search manga</string>
    <string name="manga_downloading_">Downloading…</string>
    <string name="processing_">Processing…</string>
    <string name="download_complete">Downloaded</string>
    <string name="downloads">Downloads</string>
    <string name="by_name">Name</string>
    <string name="popular">Popular</string>
    <string name="updated">Updated</string>
    <string name="newest">Newest</string>
    <string name="by_rating">Rating</string>
    <string name="sort_order">Sorting order</string>
    <string name="filter">Filter</string>
    <string name="saved_filters">Saved filters</string>
    <string name="theme">Theme</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="follow_system">Follow system</string>
    <string name="pages">Pages</string>
    <string name="clear">Clear</string>
    <string name="remove">Remove</string>
    <string name="_s_deleted_from_local_storage">\"%s\" deleted from local storage</string>
    <string name="save_page">Save page</string>
    <string name="page_saved">Page saved</string>
    <string name="pages_saved">Pages saved</string>
    <string name="share_image">Share image</string>
    <string name="_import">Import</string>
    <string name="delete">Delete</string>
    <string name="operation_not_supported">This operation is not supported</string>
    <string name="text_file_not_supported">Either pick a ZIP or CBZ file.</string>
    <string name="no_description">No description</string>
    <string name="clear_pages_cache">Clear page cache</string>
    <string name="text_file_sizes">B|kB|MB|GB|TB</string>
    <string name="standard">Standard</string>
    <string name="webtoon">Webtoon</string>
    <string name="read_mode">Read mode</string>
    <string name="grid_size">Grid size</string>
    <string name="search_on_s">Search on %s</string>
    <string name="delete_manga">Delete manga</string>
    <string name="text_delete_local_manga">Permanently delete \"%s\" from device?</string>
    <string name="reader_settings">Reader settings</string>
    <string name="switch_pages">Switch pages</string>
    <string name="_continue">Continue</string>
    <string name="error">Error</string>
    <string name="clear_thumbs_cache">Clear thumbnails cache</string>
    <string name="clear_search_history">Clear search history</string>
    <string name="search_history_cleared">Cleared</string>
    <string name="internal_storage">Internal storage</string>
    <string name="external_storage">External storage</string>
    <string name="domain">Domain</string>
    <string name="app_update_available">A new version of the app is available</string>
    <string name="open_in_browser">Open in web browser</string>
    <string name="notifications">Notifications</string>
    <string name="enabled_d_of_d" tools:ignore="PluralsCandidate">%1$d of %2$d on</string>
    <string name="new_chapters">New chapters</string>
    <string name="download">Download</string>
    <string name="notifications_settings">Notifications settings</string>
    <string name="notification_sound">Notification sound</string>
    <string name="light_indicator">LED indicator</string>
    <string name="vibration">Vibration</string>
    <string name="favourites_categories">Favorite categories</string>
    <string name="remove_category">Remove</string>
    <string name="text_empty_holder_primary">It\'s kind of empty here…</string>
    <string name="text_search_holder_secondary">Try to reformulate the query.</string>
    <string name="text_history_holder_primary">What you read will be displayed here</string>
    <string name="text_history_holder_secondary">Find what to read in the «Explore» section</string>
    <string name="text_empty_holder_secondary_filtered">There are no manga matching the filters you selected</string>
    <string name="text_local_holder_primary">Save something first</string>
    <string name="text_local_holder_secondary">Save something from an online catalog or import it from a file.</string>
    <string name="manga_shelf">Shelf</string>
    <string name="recent_manga">Recent</string>
    <string name="pages_animation">Page animation</string>
    <string name="manga_save_location">Downloads folder</string>
    <string name="not_available">Not available</string>
    <string name="cannot_find_available_storage">No available storage</string>
    <string name="other_storage">Other storage</string>
    <string name="done">Done</string>
    <string name="all_favourites">All favorites</string>
    <string name="favourites_category_empty">Empty category</string>
    <string name="read_later">Read later</string>
    <string name="updates">Updates</string>
    <string name="text_feed_holder">New chapters of what you are reading are shown here</string>
    <string name="search_results">Search results</string>
    <string name="new_version_s">New version: %s</string>
    <string name="size_s">Size: %s</string>
    <string name="clear_updates_feed">Clear updates feed</string>
    <string name="updates_feed_cleared">Cleared</string>
    <string name="rotate_screen">Rotate screen</string>
    <string name="update">Update</string>
    <string name="feed_will_update_soon">Feed update will start soon</string>
    <string name="track_sources">Look for updates</string>
    <string name="about">About</string>
    <string name="check_for_new_chapters">Check for new chapters</string>
    <string name="pinned_sources_only">Pinned sources only</string>
    <string name="hide_empty_sources">Hide empty sources</string>
    <string name="appearance">Appearance</string>
    <string name="back">Back</string>
    <string name="name">Name</string>
    <string name="bookmark_add">Add bookmark</string>
    <string name="incognito_mode">Incognito mode</string>
    <string name="language">Language</string>
    <string name="color_theme">Color scheme</string>
    <string name="type">Type</string>
    <string name="voice_search">Voice search</string>
    <string name="zoom_out">Zoom out</string>
    <string name="zoom_in">Zoom in</string>
    <string name="lock_screen_rotation">Lock screen rotation</string>
    <string name="content_type_manga">Manga</string>
    <string name="genre">Genre</string>
    <string name="author">Author</string>
    <string name="simple">Simple</string>
    <string name="storage_and_network">Storage and network</string>
	<string name="novel_reader_settings">Novel reader settings</string>
	<string name="font_size">Font size</string>
	<string name="font_family">Font family</string>
	<string name="theme_normal">Light</string>
	<string name="theme_black">Black</string>
	<string name="theme_brown">Sepia</string>
	<string name="theme_blue">Blue</string>
	<string name="theme_green">Green</string>
	<string name="theme_pink">Pink</string>
	<string name="font_serif">Cairo</string>
	<string name="font_sans">Tajawal</string>
	<string name="font_cursive">Amiri</string>
	<string name="novel_continuous_scroll">Continuous chapters</string>
	<string name="profile_title">Your profile</string>
	<string name="profile_username">Username</string>
	<string name="profile_birth_date">Date of birth</string>
	<string name="profile_save">Save changes</string>
	<string name="profile_logout">Sign out</string>
    <string name="account">Account</string>
    <string name="account_sync_title">Cloud account</string>
</resources>