<?xml version="1.0" encoding="utf-8"?>
<menu
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto">

	<item
		android:id="@+id/action_search_content_scope"
		android:icon="@drawable/ic_filter_menu"
		android:orderInCategory="0"
		android:title="@string/search_content_type"
		app:showAsAction="ifRoom">

		<menu>
			<group
				android:id="@+id/group_search_content_scope"
				android:checkableBehavior="single">
				<item
					android:id="@+id/action_scope_all"
					android:title="@string/content_type_all" />
				<item
					android:id="@+id/action_scope_anime"
					android:title="@string/content_type_anime" />
				<item
					android:id="@+id/action_scope_manga"
					android:title="@string/content_type_manga" />
			</group>
		</menu>
	</item>

	<item
		android:id="@+id/action_search_kind"
		android:icon="@drawable/ic_filter_menu"
		android:orderInCategory="0"
		android:title="@string/type"
		app:showAsAction="ifRoom">

		<menu>

			<group
				android:id="@+id/group_search_kind"
				android:checkableBehavior="single">

				<item
					android:id="@+id/action_kind_simple"
					android:title="@string/simple" />

				<item
					android:id="@+id/action_kind_title"
					android:title="@string/name" />

				<item
					android:id="@+id/action_kind_author"
					android:title="@string/author" />

				<item
					android:id="@+id/action_kind_tag"
					android:title="@string/genre" />

			</group>

			<group android:id="@+id/group_search_filters">

				<item
					android:id="@+id/action_filter_pinned_only"
					android:checkable="true"
					android:title="@string/pinned_sources_only" />

				<item
					android:id="@+id/action_filter_hide_empty"
					android:checkable="true"
					android:title="@string/hide_empty_sources" />

			</group>
		</menu>

	</item>

</menu>
