<?xml version="1.0" encoding="utf-8"?>
<menu
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto">

	<item
		android:id="@+id/action_search_content_scope"
		android:icon="@drawable/ic_filter_menu"
		android:orderInCategory="0"
		android:title="@string/search_content_type"
		app:showAsAction="ifRoom">

		<menu>
			<group
				android:id="@+id/group_search_content_scope"
				android:checkableBehavior="single">

				<item
					android:id="@+id/action_scope_all"
					android:title="@string/content_type_all" />

				<item
					android:id="@+id/action_scope_anime"
					android:title="@string/content_type_anime" />

				<item
					android:id="@+id/action_scope_manga"
					android:title="@string/content_type_manga" />
			</group>
		</menu>
	</item>

	<item
		android:id="@+id/action_voice_search"
		android:icon="@drawable/ic_voice_input"
		android:orderInCategory="1"
		android:title="@string/voice_search"
		app:showAsAction="ifRoom" />

	<item
		android:id="@+id/action_clear"
		android:title="@string/clear_search_history"
		app:showAsAction="never" />

</menu>
