<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Preference
        android:icon="@drawable/ic_person_24"
        android:key="account"
        android:layout="@layout/preference_settings_row"
        android:title="@string/account"
        android:summary="@string/account_sync_title" />

    <PreferenceScreen
        android:fragment="anilord.app.settings.LanguageSettingsFragment"
        android:icon="@drawable/ic_language"
        android:key="language"
        android:layout="@layout/preference_settings_row"
        android:title="@string/language" />

    <PreferenceScreen
        android:fragment="anilord.app.settings.ThemeSettingsFragment"
        android:icon="@drawable/ic_appearance"
        android:key="theme_settings"
        android:layout="@layout/preference_settings_row"
        android:title="@string/theme" />


    <PreferenceScreen
        android:fragment="anilord.app.settings.AppearanceSettingsFragment"
        android:icon="@drawable/ic_appearance"
        android:key="appearance"
        app:isPreferenceVisible="false"
        android:layout="@layout/preference_settings_row"
        android:title="@string/appearance" />

    <PreferenceScreen
        android:fragment="anilord.app.settings.sources.SourcesSettingsFragment"
        android:icon="@drawable/ic_manga_source"
        android:key="remote_sources"
        android:layout="@layout/preference_settings_row"
        android:title="@string/remote_sources" />

    <PreferenceScreen
        android:fragment="anilord.app.settings.ReaderSettingsFragment"
        android:icon="@drawable/ic_book_page"
        android:key="reader"
        app:isPreferenceVisible="false"
        android:layout="@layout/preference_settings_row"
        android:title="@string/reader_settings" />

    <PreferenceScreen
        android:fragment="anilord.app.settings.StorageAndNetworkSettingsFragment"
        android:icon="@drawable/ic_usage"
        android:key="network"
        app:isPreferenceVisible="false"
        android:layout="@layout/preference_settings_row"
        android:title="@string/storage_and_network" />

    <PreferenceScreen
        android:fragment="anilord.app.settings.DownloadsSettingsFragment"
        android:icon="@drawable/ic_download"
        android:key="downloads"
        app:isPreferenceVisible="false"
        android:layout="@layout/preference_settings_row"
        android:title="@string/downloads" />

    <PreferenceScreen
        android:fragment="anilord.app.settings.tracker.TrackerSettingsFragment"
        android:icon="@drawable/ic_feed"
        android:key="tracker"
        app:isPreferenceVisible="false"
        android:layout="@layout/preference_settings_row"
        android:title="@string/check_for_new_chapters" />

    <PreferenceScreen
        android:fragment="anilord.app.settings.about.AboutSettingsFragment"
        android:icon="@drawable/ic_info_outline"
        android:key="about"
        android:layout="@layout/preference_settings_row"
        android:title="@string/about" />

</PreferenceScreen>
