<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:orientation="vertical">

	<anilord.app.core.ui.sheet.AdaptiveSheetHeaderBar
		android:id="@+id/headerBar"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		app:title="@string/novel_reader_settings" />

	<androidx.core.widget.NestedScrollView
		android:id="@+id/scrollView"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:clipToPadding="false"
		android:scrollIndicators="top">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:paddingBottom="@dimen/margin_normal">

			<!-- Bookmark -->
			<anilord.app.core.ui.widgets.ListItemTextView
				android:id="@+id/button_bookmark"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/bookmark_add"
				app:drawableStartCompat="@drawable/ic_bookmark" />

			<!-- Font Size -->
			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginHorizontal="@dimen/margin_normal"
				android:layout_marginTop="@dimen/margin_normal"
				android:text="@string/font_size"
				android:textAppearance="?textAppearanceTitleSmall" />

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginHorizontal="@dimen/margin_normal"
				android:layout_marginTop="@dimen/margin_small"
				android:gravity="center_vertical"
				android:orientation="horizontal">

				<com.google.android.material.button.MaterialButton
					android:id="@+id/button_font_decrease"
					style="?materialIconButtonOutlinedStyle"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:contentDescription="@string/zoom_out"
					app:icon="@drawable/ic_remove" />

				<TextView
					android:id="@+id/textView_font_size"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:gravity="center"
					android:textAppearance="?textAppearanceTitleMedium"
					tools:text="18" />

				<com.google.android.material.button.MaterialButton
					android:id="@+id/button_font_increase"
					style="?materialIconButtonOutlinedStyle"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:contentDescription="@string/zoom_in"
					app:icon="@drawable/ic_add" />

			</LinearLayout>

			<!-- Color Theme -->
			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginHorizontal="@dimen/margin_normal"
				android:layout_marginTop="@dimen/margin_normal"
				android:text="@string/color_theme"
				android:textAppearance="?textAppearanceTitleSmall" />

			<HorizontalScrollView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/margin_small"
				android:clipToPadding="false"
				android:paddingHorizontal="@dimen/margin_normal"
				android:scrollbars="none">

				<com.google.android.material.button.MaterialButtonToggleGroup
					android:id="@+id/toggleGroup_color_theme"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:orientation="horizontal"
					app:selectionRequired="true"
					app:singleSelection="true">

					<com.google.android.material.button.MaterialButton
						android:id="@+id/button_theme_white"
						style="?materialButtonOutlinedStyle"
						android:layout_width="wrap_content"
						android:layout_height="36dp"
						android:text="@string/theme_normal" />

					<com.google.android.material.button.MaterialButton
						android:id="@+id/button_theme_black"
						style="?materialButtonOutlinedStyle"
						android:layout_width="wrap_content"
						android:layout_height="36dp"
						android:text="@string/theme_black" />

					<com.google.android.material.button.MaterialButton
						android:id="@+id/button_theme_sepia"
						style="?materialButtonOutlinedStyle"
						android:layout_width="wrap_content"
						android:layout_height="36dp"
						android:text="@string/theme_brown" />

					<com.google.android.material.button.MaterialButton
						android:id="@+id/button_theme_blue"
						style="?materialButtonOutlinedStyle"
						android:layout_width="wrap_content"
						android:layout_height="36dp"
						android:text="@string/theme_blue" />

					<com.google.android.material.button.MaterialButton
						android:id="@+id/button_theme_green"
						style="?materialButtonOutlinedStyle"
						android:layout_width="wrap_content"
						android:layout_height="36dp"
						android:text="@string/theme_green" />

					<com.google.android.material.button.MaterialButton
						android:id="@+id/button_theme_pink"
						style="?materialButtonOutlinedStyle"
						android:layout_width="wrap_content"
						android:layout_height="36dp"
						android:text="@string/theme_pink" />

				</com.google.android.material.button.MaterialButtonToggleGroup>

			</HorizontalScrollView>

			<!-- Font Family -->
			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginHorizontal="@dimen/margin_normal"
				android:layout_marginTop="@dimen/margin_normal"
				android:text="@string/font_family"
				android:textAppearance="?textAppearanceTitleSmall" />

			<com.google.android.material.button.MaterialButtonToggleGroup
				android:id="@+id/toggleGroup_font_family"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginHorizontal="@dimen/margin_normal"
				android:layout_marginTop="@dimen/margin_small"
				android:orientation="horizontal"
				app:selectionRequired="true"
				app:singleSelection="true">

				<com.google.android.material.button.MaterialButton
					android:id="@+id/button_font_serif"
					style="?materialButtonOutlinedStyle"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:text="@string/font_serif"
					android:textAllCaps="false" />

				<com.google.android.material.button.MaterialButton
					android:id="@+id/button_font_sans"
					style="?materialButtonOutlinedStyle"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:text="@string/font_sans"
					android:textAllCaps="false" />

				<com.google.android.material.button.MaterialButton
					android:id="@+id/button_font_cursive"
					style="?materialButtonOutlinedStyle"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:text="@string/font_cursive"
					android:textAllCaps="false" />

			</com.google.android.material.button.MaterialButtonToggleGroup>

			<com.google.android.material.materialswitch.MaterialSwitch
				android:id="@+id/switch_novel_scroll_mode"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/margin_small"
				android:minHeight="?android:listPreferredItemHeightSmall"
				android:paddingStart="?android:listPreferredItemPaddingStart"
				android:paddingEnd="?android:listPreferredItemPaddingEnd"
				android:text="@string/novel_continuous_scroll"
				android:textAppearance="?textAppearanceListItem"
				android:textColor="?colorOnSurfaceVariant" />

			<!-- Screen Rotation -->
			<anilord.app.core.ui.widgets.ListItemTextView
				android:id="@+id/button_screen_rotate"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/margin_small"
				android:text="@string/rotate_screen"
				android:visibility="gone"
				app:drawableStartCompat="@drawable/ic_screen_rotation"
				tools:visibility="visible" />

			<com.google.android.material.materialswitch.MaterialSwitch
				android:id="@+id/switch_screen_lock_rotation"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:drawablePadding="?android:listPreferredItemPaddingStart"
				android:ellipsize="end"
				android:minHeight="?android:listPreferredItemHeightSmall"
				android:paddingStart="?android:listPreferredItemPaddingStart"
				android:paddingEnd="?android:listPreferredItemPaddingEnd"
				android:singleLine="true"
				android:text="@string/lock_screen_rotation"
				android:textAppearance="?textAppearanceListItem"
				android:textColor="?colorOnSurfaceVariant"
				android:visibility="gone"
				app:drawableStartCompat="@drawable/ic_screen_rotation_lock"
				tools:visibility="visible" />

		</LinearLayout>

	</androidx.core.widget.NestedScrollView>
</LinearLayout>
